[gd_scene load_steps=9 format=3 uid="uid://qr6cwufsdiaq"]

[ext_resource type="Script" path="res://Scenes/Modo1.gd" id="1_k8lub"]
[ext_resource type="PackedScene" uid="uid://8hajeynpsa3s" path="res://Scenes/parallax_background2.tscn" id="1_okt01"]
[ext_resource type="Texture2D" uid="uid://bhvvw1ehudtft" path="res://Sprites/Zona.png" id="3_smhha"]
[ext_resource type="PackedScene" uid="uid://cenuufieojy4q" path="res://Scenes/FindelJuego.tscn" id="4_052if"]
[ext_resource type="FontFile" uid="uid://brg4pirco4o4j" path="res://Assets/determination.ttf" id="4_xldgv"]
[ext_resource type="Texture2D" uid="uid://ccdfdh5lapkv1" path="res://Sprites/Red_H.png" id="5_3qh8c"]
[ext_resource type="AudioStream" uid="uid://cm1wd53rr3q2e" path="res://Assets/Modo_1.wav" id="5_6gsdq"]
[ext_resource type="Texture2D" uid="uid://cwuk1tscmvmwh" path="res://Sprites/Blue_H.png" id="5_r6k41"]

[node name="Modo1" type="Node2D"]
script = ExtResource("1_k8lub")

[node name="FindelJuego" parent="." instance=ExtResource("4_052if")]

[node name="Zona" type="Sprite2D" parent="."]
position = Vector2(360, 180)
texture = ExtResource("3_smhha")

[node name="Borde" type="VBoxContainer" parent="Zona"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -189.0
offset_right = -3.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Fila0" type="HBoxContainer" parent="Zona/Borde"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Boton0" type="TextureButton" parent="Zona/Borde/Fila0"]
layout_mode = 2

[node name="Boton1" type="TextureButton" parent="Zona/Borde/Fila0"]
layout_mode = 2

[node name="Boton2" type="TextureButton" parent="Zona/Borde/Fila0"]
layout_mode = 2

[node name="Fila1" type="HBoxContainer" parent="Zona/Borde"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Boton3" type="TextureButton" parent="Zona/Borde/Fila1"]
layout_mode = 2

[node name="Boton4" type="TextureButton" parent="Zona/Borde/Fila1"]
layout_mode = 2

[node name="Boton5" type="TextureButton" parent="Zona/Borde/Fila1"]
layout_mode = 2

[node name="Fila2" type="HBoxContainer" parent="Zona/Borde"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Boton6" type="TextureButton" parent="Zona/Borde/Fila2"]
layout_mode = 2

[node name="Boton7" type="TextureButton" parent="Zona/Borde/Fila2"]
layout_mode = 2

[node name="Boton8" type="TextureButton" parent="Zona/Borde/Fila2"]
layout_mode = 2

[node name="Deter" type="VBoxContainer" parent="."]
offset_left = 520.0
offset_top = 100.0
offset_right = 643.0
offset_bottom = 140.0

[node name="Label" type="Label" parent="Deter"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xldgv")
text = "DETERMINACION"

[node name="TextureRect" type="TextureRect" parent="Deter"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_3qh8c")
stretch_mode = 2

[node name="EstadoD" type="Label" parent="Deter"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xldgv")
text = "TU TURNO"
horizontal_alignment = 1

[node name="Inter" type="VBoxContainer" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 140.0
offset_bottom = 140.0

[node name="Label" type="Label" parent="Inter"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xldgv")
text = "INTEGRIDAD"

[node name="TextureRect" type="TextureRect" parent="Inter"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_r6k41")
stretch_mode = 2

[node name="EstadoI" type="Label" parent="Inter"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xldgv")
text = "TU TURNO"
horizontal_alignment = 1

[node name="ParallaxBackground" parent="." instance=ExtResource("1_okt01")]

[node name="PVP" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6gsdq")
volume_db = -5.0
autoplay = true

[connection signal="button_up" from="FindelJuego/Volver" to="." method="_on_volver_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila0/Boton0" to="." method="_on_boton_0_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila0/Boton1" to="." method="_on_boton_1_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila0/Boton2" to="." method="_on_boton_2_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila1/Boton3" to="." method="_on_boton_3_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila1/Boton4" to="." method="_on_boton_4_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila1/Boton5" to="." method="_on_boton_5_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila2/Boton6" to="." method="_on_boton_6_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila2/Boton7" to="." method="_on_boton_7_button_up"]
[connection signal="button_up" from="Zona/Borde/Fila2/Boton8" to="." method="_on_boton_8_button_up"]

[editable path="FindelJuego"]
